Fixed logging issues, working on gui (copy delete, move file) to make it user friendly